--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@ Select ONE Additional
   </head>
 
   <body>
+
     <div class="container">
       <div>
         <h2 id="start">How it started.</h2>
         <img
-          class="pic" src="AbstractFace_Unit6Project.jpg"
+          class="pic" src="https://png.pngtree.com/png-clipart/20220614/ourmid/pngtree-happy-emoji-3d-rendering-png-image_4992364.png"
         />
       </div>
       <div>
