--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ Requirements
 [ X ] three different shapes
 [ X] three different RGB colors
 [ X ] three comments 
-[  ] three new CSS declarations in style.css
+[ X] three new CSS declarations in style.css
 
 Select ONE Additional 
 [ no ] Feature 1 - three different strokeWeight() commands
